agust-15-2024-animation-added-to-site

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Nasir Ahmad Ahmady Full Stack Web Developer"
     />
+    <meta name="google-site-verification" content="csGB6vmuAA_e4fbUe2VlgYH4ETvrTlUrwlHVDH2iUW8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <title>Nasir Ahmad Ahmady</title>
   </head>
